# CXSZN-WATER

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old  备注.md
components/gn1640t_driver/: CMakeLists.txt
components/gn1640t_driver/include/: gn1640t_driver.h
components/gn1640t_driver/src/: gn1640t_driver.c
components/u4g/: CMakeLists.txt
components/u4g/include/: u4g.h  u4g_at_buffer.h  u4g_at_cmd.h  u4g_at_http.h  u4g_core.h  u4g_data.h  u4g_state.h  u4g_uart.h  u4g_uart_recv.h  u4g_utils.h
components/u4g/src/: u4g.c  u4g_at_buffer.c  u4g_at_cmd.c  u4g_at_http.c  u4g_core.c  u4g_data.c  u4g_uart.c  u4g_uart_recv.c  u4g_utils.c
main/: CMakeLists.txt  a_feedback.c  a_feedback.h  a_led_event.c  a_led_event.h  a_network copy.c  a_network.c  a_network.h  a_nvs_flash.c  a_nvs_flash.h  a_service.c  a_service.h  a_time.c  a_time.h  gpio_blackout.c  gpio_blackout.h  gpio_buzzer.c  gpio_buzzer.h  gpio_flowmeter.c  gpio_flowmeter.h  gpio_flush.c  gpio_flush.h  gpio_tds.c  gpio_tds.h  gpio_water.c  gpio_water.h  gpio_water_timer.c  gpio_water_timer.h  head.c  head.h  main.c
