idf_component_register(SRCS "main.c" 
                            "head.c"
                            "a_nvs_flash.c"
                            "a_led_event.c"
                            "a_network.c"
                            "gpio_buzzer.c"
                            "a_feedback.c"
                            "a_time.c"
                            "a_service.c"
                            "gpio_water.c"
                            "gpio_water_timer.c"
                            "gpio_flush.c"
                            "gpio_blackout.c"
                            "gpio_tds.c"
                            "gpio_flowmeter.c"
                    INCLUDE_DIRS ".")
